@@ -22,8 +22,8 @@
 #***************************************************************************/
 
 AC_PREREQ(2.57)
-AC_INIT(rtdebug, 2.0.4)
-AC_COPYRIGHT(Copyright (c) 2003-2008 by Jens Langner <Jens.Langner@light-speed.de>)
+AC_INIT(rtdebug, 2.0.5)
+AC_COPYRIGHT(Copyright (c) 2003-2009 by Jens Langner <Jens.Langner@light-speed.de>)
 AC_REVISION($Revision$)
 AC_CONFIG_SRCDIR([src])
 AC_CONFIG_HEADER([src/includes/config.h])
