@@ -6,6 +6,10 @@ RTDebugLib - Runtime Debugging C++ Library
 $Id$
 $URL$
 
+2009-07-28  Jens Langner <Jens.Langner@light-speed.de>
+
+   * CRTDebug.c: fixed the broken build when building rtdebug with GCC 4.x.
+
 2008-06-03  Jens Langner <Jens.Langner@light-speed.de>
 
    * CRTDebug.c: added va_copy() usage to make the new dynamic allocation
